# SmartHomeBridge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.MD  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/chicken_thread_detetor_esp32cam/esp32cam_extention/: README.md
src/chicken_thread_detetor_esp32cam/esp32cam_extention/include/: README
src/chicken_thread_detetor_esp32cam/esp32cam_extention/src/: main.cpp
src/firmware/esp32cam_extention/: platformio.ini
src/firmware/esp32cam_extention/include/: secrets.example.h
src/firmware/esp32cam_extention/src/: main.cpp
src/loxone_bridge/: config.py
src/loxone_bridge/gui/: __init__.py  factory.py  runner.py
src/loxone_bridge/services/: activity_log.py  env_settings.py
src/smart_home_bridge/: __init__.py  __main__.py  composition.py  config.py
src/smart_home_bridge/bridge_devices/chicken_door/: __init__.py  chicken_door.py  chicken_door_message.py  chicken_door_mqtt_callbacks.py  door_controller.py
src/smart_home_bridge/bridge_devices/chicken_thread_detector/: ChickenThreadDetector.ipynb  __init__.py  chicken_thread_detector.py  chicken_thread_detector_controller.py  chicken_thread_detector_message.py  chicken_thread_detector_mqtt_callbacks.py  danger_scoring.py  (+5 more)
src/smart_home_bridge/core/: __init__.py  command.py  device.py  device_controller.py
src/smart_home_bridge/gui/: __init__.py  factory.py  main_window.py  runner.py  threat_detection.py
src/smart_home_bridge/infrastructure/: __init__.py
src/smart_home_bridge/models/: __init__.py  chicken_thread.py
src/smart_home_bridge/services/: __init__.py  env_settings.py
tests/: test_activity_log.py  test_camera_client.py  test_chicken_door.py  test_chicken_thread_detector.py  test_chicken_threat_pipeline.py  test_composition.py  test_config.py  test_docker_runtime.py  test_env_settings.py  test_gui.py  test_http_gate.py  test_mqtt_gate.py
(+10 files in other folders)
