[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-home-bridge"
version = "0.1.0"
description = "A bridge for connecting smart home systems to device integrations"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt",
    "Pillow",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
gui = [
    "PySide6",
    "ultralytics",
]
inference = [
    "ultralytics",
]

[project.scripts]
smart-home-bridge = "smart_home_bridge.__main__:run"
smart-home-bridge-gui = "smart_home_bridge.gui:run"

[tool.setuptools.packages.find]
where = ["src"]
